--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,73 +6,86 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-nav">
-        <a class="main-header__logo">
-          <img class="main-header__logo-image" src="http://placehold.it/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»">
-        </a>
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <ul class="main-nav__links site-navigation">
-          <li><a class="site-navigation__link" href="catalog.html">Каталог товаров</a></li>
-          <li><a class="site-navigation__link" href="form.html">Вязание на заказ</a></li>
-        </ul>
-        <div class="main-nav__links user-actions">
-          <a class="user-actions__link user-actions__link--search" href="#">Поиск по сайту</a>
-          <a class="user-actions__link user-actions__link--cart" href="#">Корзина: пока пуста</a>
-        </div>
-      </nav>
+      <div class="main-header__top">
+        <nav class="main-nav">
+          <a class="main-header__logo" href="index.html">
+            <img class="main-header__logo-image" src="http://placehold.it/86x35" width="86" height="35" alt="Интернет-магазин «Мишка»">
+          </a>
+          <button class="main-nav__toggle" type="button">Открыть меню</button>
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link">Каталог товаров</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="form.html">Вязание на заказ</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--search" href="#">Поиск по сайту</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--cart" href="#">Корзина: пока пуста</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="main-header__bottom">
+        <h1 class="main-header__title">Каталог товаров</h1>
+      </div>
     </header>
 
     <main class="main-content">
-      <header class="page-header">
-        <h1 class="page-header__heading">Каталог товаров</h1>
-      </header>
-
       <section class="catalog">
         <h2 class="visually-hidden">Список товаров</h2>
         <ul class="catalog__list">
-          <li class="catalog-item">
-            <a class="catalog-item__photo catalog-item__link" href="catalog-item.html">
+          <li class="catalog__item product">
+            <a class="product__photo" href="catalog-item.html">
               <img src="http://placehold.it/260x195" width="260" height="195" alt="Зайчик-попрыгайчик">
             </a>
-            <div class="catalog-item__info">
-              <a class="catalog-item__link" href="catalog-item.html">
-                <h3 class="catalog-item__title">Зайчик-попрыгайчик</h3>
-              </a>
-              <p class="catalog-item__data">Рост 30 см, вес 200 г</p>
-              <p class="catalog-item__ordering">
-                <span class="catalog-item__price">1 200 руб.</span>
-                <a class="catalog-item__to-cart" href="order.html">Заказать</a>
-              </p>
+            <div class="product__info">
+              <div class="product__top">
+                <a class="product__link" href="catalog-item.html">
+                  <h3 class="product__title">Зайчик-попрыгайчик</h3>
+                </a>
+                <p class="product__data">Рост 30 см, вес 200 г</p>
+              </div>
+              <div class="product__bottom">
+                <b class="product__price">1 200 руб.</b>
+                <a class="product__to-cart" href="order.html">Заказать</a>
+              </div>
             </div>
           </li>
-          <li class="catalog-item">
-            <a class="catalog-item__photo catalog-item__link" href="catalog-item.html">
+          <li class="catalog__item product">
+            <a class="product__photo" href="catalog-item.html">
               <img src="http://placehold.it/260x195" width="260" height="195" alt="Корзинка для белья">
             </a>
-            <div class="catalog-item__info">
-              <a class="catalog-item__link" href="catalog-item.html">
-                <h3 class="catalog-item__title">Корзинка для белья</h3>
-              </a>
-              <p class="catalog-item__data">Диаметр 15 см, высота 10 см</p>
-              <p class="catalog-item__ordering">
-                <span class="catalog-item__price">690 руб.</span>
-                <a class="catalog-item__to-cart" href="order.html">Заказать</a>
-              </p>
+            <div class="product__info">
+              <div class="product__top">
+                <a class="product__link" href="catalog-item.html">
+                  <h3 class="product__title">Корзинка для белья</h3>
+                </a>
+                <p class="product__data">Диаметр 15 см, высота 10 см</p>
+              </div>
+              <div class="product__bottom">
+                <b class="product__price">690 руб.</b>
+                <a class="product__to-cart" href="order.html">Заказать</a>
+              </div>
             </div>
           </li>
-          <li class="catalog-item">
-            <a class="catalog-item__photo catalog-item__link" href="catalog-item.html">
+          <li class="catalog__item product">
+            <a class="product__photo" href="catalog-item.html">
               <img src="http://placehold.it/260x195" width="260" height="195" alt="Большая корзинка для игрушек">
             </a>
-            <div class="catalog-item__info">
-              <a class="catalog-item__link" href="catalog-item.html">
-                <h3 class="catalog-item__title">Большая корзинка для игрушек</h3>
-              </a>
-              <p class="catalog-item__data">Диаметр 30 см, высота 30 см</p>
-              <p class="catalog-item__ordering">
-                <span class="catalog-item__price">1 500 руб.</span>
-                <a class="catalog-item__to-cart" href="order.html">Заказать</a>
-              </p>
+            <div class="product__info">
+              <div class="product__top">
+                <a class="product__link" href="catalog-item.html">
+                  <h3 class="product__title">Большая корзинка для игрушек</h3>
+                </a>
+                <p class="product__data">Диаметр 30 см, высота 30 см</p>
+              </div>
+              <div class="product__bottom">
+                <b class="product__price">1 500 руб.</b>
+                <a class="product__to-cart" href="order.html">Заказать</a>
+              </div>
             </div>
           </li>
         </ul>
@@ -80,45 +93,55 @@
 
       <section class="video">
         <h2 class="video__title">Процесс производства</h2>
-        <div class="video__container">
-          <video class="video__player" poster="http://placehold.it/260x150">
-          </video>
+        <div class="video__player">
+          <img class="video__preview" src="http://placehold.it/260x150" width="260" height="150" alt="Видео процесса производства наших товаров">
+          <button class="video__btn-play" type="button">Воспроизвести</button>
         </div>
-        <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="video__order button" href="#">Сделать заказ</a>
+        <div class="video__bottom">
+          <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+          <a class="video__order btn" href="#">Сделать заказ</a>
+        </div>
       </section>
     </main>
 
     <footer class="main-footer">
-      <a class="main-footer__logo">
-        <img class="main-footer__logo-image" src="http://placehold.it/102x34" width="102" height="34" alt="Интернет-магазин «Мишка»">
-      </a>
-
-      <ul class="social">
-        <li lang="en"><a class="social__link social__link--instagram" href="#">Instagram</a></li>
-        <li lang="en"><a class="social__link social__link--facebook" href="#">Facebook</a></li>
-        <li lang="en"><a class="social__link social__link--twitter" href="#">Twitter</a></li>
+      <ul class="main-footer__social social">
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="#">Инстаграм</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="#">Фейсбук</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--twitter" href="#">Твиттер</a>
+        </li>
       </ul>
 
-      <p class="copyright">
+      <p class="main-footer__copyright copyright">
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <b class="copyright__text">Разработано</b>
-          <img class="copyright__logo" src="http://placehold.it/27x34" width="27" height="34" lang="en" alt="HTML Academy">
+          <img class="copyright__logo" src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy">
         </a>
       </p>
     </footer>
 
-    <div class="modal">
-      <section class="modal__window to-cart">
-        <h2 class="to-cart__title">Добавить в корзину</h2>
-        <p class="to-cart__text">Выберите размер:</p>
-        <ul class="to-cart__options">
-          <li><button class="to-cart__size to-cart__size--checked" type="button">S</button></li>
-          <li><button class="to-cart__size" type="button">M</button></li>
-          <li><button class="to-cart__size" type="button">L</button></li>
-        </ul>
-        <button class="to-cart__add button button--to-cart" type="button">Добавить</button>
-      </section>
+    <div class="overlay"></div>
+    <div class="modal modal--to-cart">
+      <b class="modal__title">Добавить в корзину</b>
+      <p class="modal__text">Выберите размер:</p>
+      <form class="modal__form to-cart-form" action="https://echo.htmlacademy.ru" method="post">
+        <div class="to-cart-form__sizes">
+          <input class="to-cart-form__input-radio" id="size-s" type="radio" name="size" value="s" checked>
+          <label class="to-cart-form__label-radio" for="size-s">S</label>
+
+          <input class="to-cart-form__input-radio" id="size-m" type="radio" name="size" value="m">
+          <label class="to-cart-form__label-radio" for="size-m">M</label>
+
+          <input class="to-cart-form__input-radio" id="size-l" type="radio" name="size" value="l">
+          <label class="to-cart-form__label-radio" for="size-l">L</label>
+        </div>
+        <button class="modal__btn btn" type="submit">Добавить</button>
+      </form>
     </div>
   </body>
 </html>
